# brain-game

./: .gitignore  README.md  build.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  start_server.py
backend/brain_game/: __init__.py  main.py
backend/brain_game/api/: analytics.py  router.py  sessions.py  telemetry.py  thresholds.py
backend/brain_game/device/: simulator.py  tgam.py
backend/brain_game/models/: __init__.py  orm.py  schemas.py
backend/brain_game/processors/: __init__.py  attention.py  fusion.py
backend/brain_game/services/: llm_reports.py
backend/brain_game/ws/: __init__.py  eeg_stream.py  handlers.py
backend/static/: index.html
backend/static/assets/: index-DZ3kzzcV.css  index-DhNj3kCF.js
docs/superpowers/plans/: 2026-06-01-phase-0-scaffold.md
docs/superpowers/specs/: 2026-06-01-brain-game-migration-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: FluidBg.tsx  GameCard.tsx  Sidebar.tsx  TopHeader.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  FormInput.tsx  GlassPanel.tsx  Modal.tsx  Slider.tsx  index.ts
frontend/src/game/: engine.ts  input-adapter.ts  renderer.ts  types.ts
frontend/src/hooks/: useEEG.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Archery.tsx  Dashboard.tsx  Portal.tsx  ReadingTraining.tsx  StarRaid.tsx
openspec/changes/greenfield-rebuild/: .comet.yaml  .openspec.yaml  design.md  proposal.md  tasks.md
